--- a/src/all.css
+++ b/src/all.css
@@ -2,3 +2,17 @@
     margin: 0px;
     font-family: Sans-Serif;
 }
+
+.animate {
+  -moz-transition: -moz-transform 0.5s ease;
+  -o-transition: -o-transform 0.5s ease;
+  -webkit-transition: -webkit-transform 0.5s ease;
+  transition: transform 0.5s ease;
+}
+
+.rotate:active {
+  -moz-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  transform: rotate(360deg);
+}
