--- a/src/all.css
+++ b/src/all.css
@@ -3,16 +3,43 @@
     font-family: Sans-Serif;
 }
 
+.my-style {
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.my-style-2 {
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 90%;
+    height: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    padding: 10px;
+    text-align: center
+}
+
+svg {
+    margin-top: 20px;
+    transition: transform 0.5s ease;
+}
+
 .animate {
-  -moz-transition: -moz-transform 0.5s ease;
-  -o-transition: -o-transform 0.5s ease;
-  -webkit-transition: -webkit-transform 0.5s ease;
-  transition: transform 0.5s ease;
+    -moz-transition: -moz-transform 0.5s ease;
+    -o-transition: -o-transform 0.5s ease;
+    -webkit-transition: -webkit-transform 0.5s ease;
+    transition: transform 0.5s ease;
 }
 
 .rotate:active {
-  -moz-transform: rotate(360deg);
-  -ms-transform: rotate(360deg);
-  -webkit-transform: rotate(360deg);
-  transform: rotate(360deg);
+    -moz-transform: rotate(360deg);
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
 }
