--- a/src/all.css
+++ b/src/all.css
@@ -10,11 +10,11 @@
     align-items: center;
     background-repeat: no-repeat;
     background-size: cover;
-    transition: all 0.8s ease-in-out;
+    transition: opacity 300ms ease-in-out;
     opacity: 1;
 }
 
-.fade-out {
+.my-style.fade-out {
     opacity: 0;
 }
 .my-style-2 {
